--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,25 @@ a{
   text-decoration: none;
 }
 
+h3{
+  margin: 0 0 10% 0 ;
+}
+
+h4{
+  margin: 0 0 3% 0 ;
+}
+
+p{
+  margin: 0 0 10% 0;
+}
+
+
+
 
 /* --------------------------------------------------------- */
 /* COMPONENT CLASSES                                         */
 /* --------------------------------------------------------- */
+
 
 /* ----------------- HEADER ------------------ */
 .navbar-customise{
@@ -36,7 +51,6 @@ a{
   border-radius: 1px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
   height: 10vh;
-  margin: auto -16px;
 }
 
 .navbar-brand{
@@ -51,18 +65,37 @@ a{
 
 
 
+/* ----------------- SPELLS ------------------ */
+
+.spell-container{
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.spell-card{
+  margin: 1%;
+  padding: 2% 1% 0 1% ;
+  text-align: center;
+  min-width: 20%;
+  background-color: green;
+}
+
 
 
 /* ----------------- FOOTER ------------------ */
 .footer {
   align-items: center;
   background-color: red;
+  bottom: 0;
   color:black;
   display: flex;
   font-size: 0.75rem;
   height: 5vh;
   justify-content: center;
-  margin-left: -20px;
+  position: absolute;
+  width: 100vw;
 }
 
 .footer a {
