--- a/src/App.css
+++ b/src/App.css
@@ -26,15 +26,18 @@ a{
 }
 
 h3{
-  margin: 0 0 10% 0 ;
+  font-size: 1.5rem;
+  margin: 0 0 5% 0 ;
 }
 
 h4{
-  margin: 0 0 3% 0 ;
+  font-size: 1.0rem;
+  margin: 0 0 1% 0 ; 
 }
 
 p{
-  margin: 0 0 10% 0;
+  font-size: 0.8em;
+  margin: 0 0 5% 0;
 }
 
 
@@ -67,6 +70,19 @@ p{
 
 /* ----------------- SPELLS ------------------ */
 
+.ReactModal__Overlay{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ReactModal__Content{
+  height: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40vw;
+}
+
 .spell-container{
   align-items: center;
   display: flex;
@@ -82,6 +98,12 @@ p{
   background-color: green;
 }
 
+.spell-card-modal{
+
+  padding: 2% 1% 0 1% ;
+  text-align: center;
+  background-color: blue;
+}
 
 
 /* ----------------- FOOTER ------------------ */
