--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,11 @@ a{
   text-decoration: none;
 }
 
+h2{
+  font-size: 2.0rem;
+  text-align: center;
+}
+
 h3{
   font-size: 1.5rem;
   margin: 0 0 5% 0 ;
