--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ a{
 
 h2{
   font-size: 2.0rem;
+  margin: 0 0 2% 0 ;
   text-align: center;
 }
 
@@ -41,7 +42,7 @@ h4{
 }
 
 p{
-  font-size: 0.8em;
+  font-size: 0.9em;
   margin: 0 0 5% 0;
 }
 
@@ -71,6 +72,20 @@ p{
   color: blue;
 }
 
+
+/* ----------------- MENU ------------------ */
+
+.section-menu{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 85vh;
+  justify-content: center;
+}
+
+.section-menu p {
+  text-align: center;
+}
 
 
 /* ----------------- SPELLS ------------------ */
