Added contents to menu bar

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,11 @@ p{
   color: blue;
 }
 
+.navbar-container{
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
 
 /* ----------------- MENU ------------------ */
 
