--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ p{
 .spell-card{
   background-color: #DBA858;
   border: 2px solid var(--gold);
-  border-radius: 25px;
+  border-radius: 
   margin: 1%;
   padding: 2% 1% 0 1% ;
   text-align: center;
