--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@ p{
 .navbar-container{
   align-items: center;
   display: flex;
+  height: 100%;
   justify-content: space-between;
 }
 
@@ -117,7 +118,7 @@ p{
 
 
 .menu-link{
-  margin: 5%;
+  margin: 4%;
   text-align: center;
 }
 
