Add search input

--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,19 @@ p{
 
 /* ----------------- SPELLS ------------------ */
 
+#search-box-div{
+  align-content: center;
+  display: flex;
+  justify-content: center;
+  padding: 2%;
+}
+
+#search-box-input{
+  padding: 1%;
+  width: 30%;
+}
+
+
 .ReactModal__Overlay{
   display: flex;
   justify-content: center;
@@ -171,7 +184,7 @@ p{
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  min-height: 85vh ;
+  min-height: 65vh ;
 }
 
 .spell-card{
