--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,14 @@ h2{
 }
 
 h3{
+  color: var(--red);
   font-size: 1.5rem;
   line-height: 3.0rem;
-  margin: 0 0 1% 0 ;
+  margin: 0 0 0 0 ;
 }
 
 h4{
+  color: var(--red);
   font-size: 1.0rem;
   line-height: 2.0rem;
   margin: 5% 0 0 0 ; 
@@ -69,6 +71,7 @@ p{
   border-radius: 1px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
   height: 10vh;
+  padding: 1% 0;
 }
 
 .navbar-brand{
@@ -117,7 +120,7 @@ p{
 }
 
 .menu-container p:hover{
-  color:var(--cream);
+  color:var(--gold);
 }
 
 .menu-link{
@@ -152,10 +155,12 @@ p{
 }
 
 #search-box-input{
+  background: none;
+  border: none;
+  border-bottom: 1px solid var(--darkBlue);
   padding: 1%;
   width: 30%;
 }
-
 
 .ReactModal__Overlay{
   display: flex;
@@ -167,6 +172,7 @@ p{
   height: 50%;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
   width: 40vw;
 }
 
@@ -177,7 +183,7 @@ p{
 }
 
 .button-close-modal:hover{
-  color: var(--red);
+  color: var(--gold);
   cursor: pointer;
 }
 
@@ -192,16 +198,23 @@ p{
 }
 
 .spell-card{
-  background-color: #DBA858;
+  align-items: center;
+  background-color: var(--blue);
   border: 2px solid var(--gold);
+  display: flex;
+  justify-content: center;
   margin: 1%;
-  padding: 2% 1% 0 1% ;
-  text-align: center;
-  min-width: 20%;
+  padding: 0 0.5% 1% 0.5%;
+  min-width: 10%;
 }
 
-.spell-card-modal{
-  text-align: center;
+.spell-card:hover{
+  cursor: pointer;
+}
+
+.spell-card h4{
+color: var(--cream);
+margin-top: 0;
 }
 
 
