--- a/src/App.css
+++ b/src/App.css
@@ -45,14 +45,14 @@ h3{
 
 h4{
   color: var(--red);
-  font-size: 1.0rem;
+  font-size: 1.4rem;
   line-height: 2.0rem;
   margin: 5% 0 0 0 ; 
 }
 
 p{
   color:var(--blue);
-  font-size: 1.0em;
+  font-size: 1.2em;
   line-height: 1.2rem;
   margin: 0;
 }
@@ -70,37 +70,33 @@ p{
   background-color: var(--darkBlue);
   border-radius: 1px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: row;
   height: 10vh;
+  justify-content: space-between;
   padding: 1% 0;
 }
 
-.navbar-brand{
-  flex-grow: 2;
-  font-family: var(--titleFont);
-  font-size: 2.5rem;
-  margin-left:2rem;
-}
-
-
-.navbar-container{
-  align-items: center;
-  display: flex;
-  height: 100%;
-  justify-content: space-between;
-}
-
-.navbar-container p{
+.navbar-customise p{
   color: var(--gold);
 }
 
-.navbar-container p:hover{
+.navbar-customise p:hover{
   color: var(--cream);
-  cursor: pointer;
 }
 
+.navbar-brand{
+  align-items: center;
+  display: flex;
+  font-family: var(--titleFont);
+  font-size: 2.5em;
+  margin: 0 2rem 0 2rem;
+}
 
 .navbar-contents{
-  margin-right: 10rem;
+  align-items: center;
+  display: flex;
+  margin: 0 2% 0 0;
 }
 
 
@@ -124,7 +120,7 @@ p{
 }
 
 .menu-link{
-  margin: 4%;
+  margin: 3%;
   text-align: center;
 }
 
